chore:update generate api
